@@ -3,6 +3,7 @@
 	mysql : added support for timestamp to date conversion
 	std : added merge_sort native implementation
 	std : added mem_local_size
+	regexp : fix in regexp_match, ^ no longer match if pos > 0
 
 2011-09-10 : 1.8.2
 	vm : use 15 digits (instead of 10) for float display
